FIX(UPS-019): correcion de codigo mediante de editaba las clases forms